# open-webui-spider-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
