[package]
name = "open-webui-spider-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
config = "0.15.19"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
spider = { version = "2.44.9", features = ["chrome", "chrome_intercept", "real_browser", "smart"] }
spider_transformations = "2.37.114"
tokio = { version = "1.49.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
